# AnalysisConfigs

./: .gitattributes  .gitignore  MANIFEST.in  README.md  coffea_to_parquet.py  load.ipynb  parquet_to_h5.ipynb  parquet_to_h5.py  pyproject.toml  setup.cfg
configs/: load.ipynb
configs/HH4b/: .sites_map.json  2b_region_config.py  HH4b_config.py  HH4b_parton_matching_config.py  HH4b_parton_matching_config_onnx.py  HH4b_save_skimmed.py  HH4b_vbf_ggf_dnn_test_config.py  README.md  config_norm.py  custom_cut_functions.py  custom_cuts.py  efficiency.ipynb  higgs_mass.ipynb  onnx_executor.py  parton_matching_function.py  parton_matching_test.ipynb  prediction_selection.py  workflow.py  workflow_dummy.py
configs/HH4b/datasets/: DATA_JetMET.json  DATA_JetMET_redirector.json  DATA_JetMET_skimmed.json  QCD.json  QCD_redirector.json  SPANet_classification.json  SPANet_classification_redirector.json  datasets_definitions.json  signal_VBF_HH4b.json  signal_VBF_HH4b_local.json  signal_VBF_HH4b_redirector.json  signal_ggF_HH4b.json  signal_ggF_HH4b_private.json  signal_ggF_HH4b_private_redirector.json  signal_ggF_HH4b_redirector.json
configs/HH4b/params/: jets_calibration.yaml  object_preselection.yaml  t3_run_options.yaml  t3_run_options_long.yaml  t3_run_options_spanet_predict.yaml  t3_run_options_spanet_predict_onlyhistos.yaml  triggers.yaml
configs/HH4b_common/: HH4b_config_common.py  configurator_options.py  custom_cut_functions_common.py  custom_cuts_common.py  custom_object_preselection_common.py  custom_weights.py  dnn_input_variables.py  onnx_executor_common.py  workflow_common.py
configs/VBF_HH4b/: .sites_map.json  VBF_HH4b_config.py  VBF_HH4b_test_config.py  custom_cut_functions.py  custom_cuts.py  inference_session_onnx.py  onnx_executor.py  vbf_matching.py  workflow copy.py  workflow.py
configs/VBF_HH4b/datasets/: DATA_JetMET.json  DATA_JetMET_redirector.json  QCD.json  QCD_redirector.json  datasets_definitions.json  (+6 more)
configs/jme/: README.md  cartesian_config.py  combine_eta_bins.py  custom_cut_functions.py  custom_functions.py  cuts.py  exec.py  exec.sh  jme_config.py  load.py  median.py  median_binned.py  median_unbinned.py  plot.py  workflow.py
configs/tests/: analysis_config.py  analysis_config_norm_syst.py  analysis_config_subsamples.py
configs/zmumu/: .sites_map.json  README.md  config.py  config_naf.py  custom_cut_functions.py  example_config.py  genweights_2018.py  workflow.py
notebooks/: VBFtight_cuts_efficiency.ipynb  choose_correct_vbf_jets.ipynb  compare_dnn_morphing.ipynb  efficiency.ipynb  example.ipynb  example_vbf.ipynb  fit_test.ipynb  higgs_mass.ipynb  keras_combine_models.ipynb  load.ipynb  load_jme.ipynb  load_norm_sys.ipynb  matching_efficinecy.ipynb  mc_truth_function.ipynb  neutrino_matching_test.ipynb  new_higgs_inv_mass.ipynb  normalize_distribution.ipynb  parton_matching_Hbb.ipynb  parton_matching_Hbb_comparison.ipynb  parton_matching_Hbb_numba.ipynb  parton_matching_test.ipynb  parton_matching_vbf.ipynb  parton_matching_vbf_numba.ipynb  plot_2bMorphedvs4b.ipynb  plot_jet_kin.ipynb  read_genjet_pt.ipynb  read_jmenano.ipynb  run2_pairing.ipynb  theta_angles.ipynb  vbf_jet_selection_efficiency.ipynb
scripts/: convert_keras_to_onnx.py  plot_2bMorphedvs4b.py  plot_from_coffea.py  plot_from_coffea_multiples.py
utils/: average_keras_to_onnx.py  basic_functions.py  dnn_evaluation_functions.py  inference_session_onnx.py  onnx_executor_common.py  parton_matching_function.py  plot_from_coffea.py  prediction_selection.py  reconstruct_higgs_candidates.py  spanet_evaluation_functions.py  variables_helpers.py  vbf_matching.py
(+603 files in other folders)
