[metadata]
name = configs
description = Library of configurations and customizations for PocketCoffea framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PocketCoffea/AnalysisConfigs
author = Davide Valsecchi,Matteo Marchegiani
author_email = davide.valsecchi@cern.ch,matteo.marchegiani@cern.ch
license = BSD-3-Clause
license_file = LICENSE
platforms =
    Any
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed
project_urls =
    Documentation = https://PocketCoffea.readthedocs.io/
    Bug Tracker = https://github.com/PocketCoffea/AnalysisConfigs/issues
    Discussions = https://github.com/PocketCoffea/AnalysisConfigs/discussions
    Changelog = https://github.com/PocketCoffea/AnalysisConfigs/releases

[options]
packages = find:
install_requires =
   pocket_coffea
python_requires = >=3.7
include_package_data = True
scripts =



[flake8]
extend-ignore = E203, E501, E722, B950
extend-select = B9
per-file-ignores =
    tests/*: T
    noxfile.py: T
